vlib/v/checker/tests/structured_generic_receiver_repeated_placeholder_err.vv
struct ReceiverPatternExpect[T] {
	value T
}

fn (e ReceiverPatternExpect[map[K]K]) same_value(key K, value K) K {
	if key in e.value {
		return e.value[key]
	}
	return value
}

fn main() {
	ReceiverPatternExpect[map[string]int]{
		value: {
			'one': 1
		}
	}.same_value('one', 'fallback')
}
